--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "db:server": "json-server --watch json/data.json --port 3000"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "exceljs": "^4.4.0",
+    "json-server": "^0.17.4",
+    "pdfjs-dist": "^3.11.174",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
